--- a/src/css/app.css
+++ b/src/css/app.css
@@ -4,36 +4,116 @@
     border: 1px solid;
     border-radius: 4px;
     margin-bottom: 15px;
-     /* Personalizza la larghezza a tuo piacimento */
-  }
-  
-  /* Stili specifici per i diversi tipi di alert */
-  
-  /* Success */
-  .alert-success {
+    /* Personalizza la larghezza a tuo piacimento */
+}
+
+/* Stili specifici per i diversi tipi di alert */
+
+/* Success */
+.alert-success {
     color: #3c763d;
     background-color: #dff0d8;
     border-color: #d6e9c6;
-  }
-  
-  /* Warning */
-  .alert-warning {
+}
+
+/* Warning */
+.alert-warning {
     color: #8a6d3b;
     background-color: #fcf8e3;
     border-color: #faebcc;
-  }
-  
-  /* Danger */
-  .alert-danger {
+}
+
+/* Danger */
+.alert-danger {
     color: #a94442;
     background-color: #f2dede;
     border-color: #ebccd1;
-  }
-  
-  /* Info */
-  .alert-info {
+}
+
+/* Info */
+.alert-info {
     color: #31708f;
     background-color: #d9edf7;
     border-color: #bce8f1;
-  }
-  
+}
+
+/********************/
+/* Margin-bottom */
+.mb-0 { margin-bottom: 0; }
+.mb-1 { margin-bottom: 0.25rem; }
+.mb-2 { margin-bottom: 0.5rem; }
+.mb-3 { margin-bottom: 0.75rem; }
+.mb-4 { margin-bottom: 1rem; }
+.mb-5 { margin-bottom: 1.25rem; }
+.mb-6 { margin-bottom: 1.5rem; }
+.mb-8 { margin-bottom: 2rem; }
+.mb-10 { margin-bottom: 2.5rem; }
+.mb-12 { margin-bottom: 3rem; }
+.mb-16 { margin-bottom: 4rem; }
+.mb-20 { margin-bottom: 5rem; }
+.mb-24 { margin-bottom: 6rem; }
+.mb-32 { margin-bottom: 8rem; }
+.mb-40 { margin-bottom: 10rem; }
+.mb-48 { margin-bottom: 12rem; }
+.mb-56 { margin-bottom: 14rem; }
+.mb-64 { margin-bottom: 16rem; }
+
+/* Margin-top */
+.mt-0 { margin-top: 0; }
+.mt-1 { margin-top: 0.25rem; }
+.mt-2 { margin-top: 0.5rem; }
+.mt-3 { margin-top: 0.75rem; }
+.mt-4 { margin-top: 1rem; }
+.mt-5 { margin-top: 1.25rem; }
+.mt-6 { margin-top: 1.5rem; }
+.mt-8 { margin-top: 2rem; }
+.mt-10 { margin-top: 2.5rem; }
+.mt-12 { margin-top: 3rem; }
+.mt-16 { margin-top: 4rem; }
+.mt-20 { margin-top: 5rem; }
+.mt-24 { margin-top: 6rem; }
+.mt-32 { margin-top: 8rem; }
+.mt-40 { margin-top: 10rem; }
+.mt-48 { margin-top: 12rem; }
+.mt-56 { margin-top: 14rem; }
+.mt-64 { margin-top: 16rem; }
+
+/* Left */
+.left-0 { left: 0; }
+.left-1 { left: 0.25rem; }
+.left-2 { left: 0.5rem; }
+.left-3 { left: 0.75rem; }
+.left-4 { left: 1rem; }
+.left-5 { left: 1.25rem; }
+.left-6 { left: 1.5rem; }
+.left-8 { left: 2rem; }
+.left-10 { left: 2.5rem; }
+.left-12 { left: 3rem; }
+.left-16 { left: 4rem; }
+.left-20 { left: 5rem; }
+.left-24 { left: 6rem; }
+.left-32 { left: 8rem; }
+.left-40 { left: 10rem; }
+.left-48 { left: 12rem; }
+.left-56 { left: 14rem; }
+.left-64 { left: 16rem; }
+
+/* Right */
+.right-0 { right: 0; }
+.right-1 { right: 0.25rem; }
+.right-2 { right: 0.5rem; }
+.right-3 { right: 0.75rem; }
+.right-4 { right: 1rem; }
+.right-5 { right: 1.25rem; }
+.right-6 { right: 1.5rem; }
+.right-8 { right: 2rem; }
+.right-10 { right: 2.5rem; }
+.right-12 { right: 3rem; }
+.right-16 { right: 4rem; }
+.right-20 { right: 5rem; }
+.right-24 { right: 6rem; }
+.right-32 { right: 8rem; }
+.right-40 { right: 10rem; }
+.right-48 { right: 12rem; }
+.right-56 { right: 14rem; }
+.right-64 { right: 16rem; }
